--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,21 @@
 [submodule "vim-fugitive"]
-	path = vim-fugitive
-	url = https://github.com/tpope/vim-fugitive
+  path = vim-fugitive
+  url = https://github.com/tpope/vim-fugitive
 [submodule "vim/bundle/vim-fugitive"]
-	path = vim/bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive
+  path = vim/bundle/vim-fugitive
+  url = https://github.com/tpope/vim-fugitive
 [submodule "vim/bundle/vim-markdown"]
-	path = vim/bundle/vim-markdown
-	url = https://github.com/tpope/vim-markdown
+  path = vim/bundle/vim-markdown
+  url = https://github.com/tpope/vim-markdown
 [submodule "vim/bundle/vim-colorschemes"]
-	path = vim/bundle/vim-colorschemes
-	url = https://github.com/flazz/vim-colorschemes
+  path = vim/bundle/vim-colorschemes
+  url = https://github.com/flazz/vim-colorschemes
+[submodule "vim/bundle/ale"]
+	path = vim/bundle/ale
+	url = https://github.com/w0rp/ale
+[submodule "vim/bundle/vim-maktaba"]
+	path = vim/bundle/vim-maktaba
+	url = https://github.com/google/vim-maktaba
+[submodule "vim/bundle/vim-codefmt"]
+	path = vim/bundle/vim-codefmt
+	url = https://github.com/google/vim-codefmt
